--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django==1.11.3
+django-cors-headers==2.1.0
+djangorestframework==3.6.3
+drfdocs==0.0.11
+Markdown==2.6.8
 psycopg2==2.7.3
 pytz==2017.2
